app/assets/tailwind/application.css
/* ... */
@utility namespace-text-container {
  .namespace-list-tree .namespace-entry-contents & {
    min-width: 0;
  }
}

@utility namespace-text {
  .namespace-list-tree .namespace-entry-contents & {
    min-width: 0;
  }

  .namespace-list-tree .namespace-entry-contents & {
    flex-basis: 100%;
  }
}

@utility avatar-container {
  .namespace-list-tree .namespace-entry-contents & {
    flex-shrink: 0;
  }

  .namespace-list-tree .namespace-entry-contents & > a {
    width: 100%;
    text-decoration: none;
  }
}

@utility title {
  .namespace-list-tree .namespace-entry-contents & {
    @apply text-base font-medium text-slate-900 dark:text-white;
  }
}

@utility has-more-items {
  .namespace-list-tree &.namespace-entry-contents {
    display: block;
    padding: 20px 10px;
  }
}

@utility description {
  .namespace-list-tree .namespace-entry-contents & p {
    max-width: 100%;
    @apply text-sm text-slate-700 dark:text-slate-400;
  }
}

@utility stats {
  .namespace-list-tree .namespace-entry-contents & {
    position: relative;
    line-height: normal;
    text-align: right;
    flex-shrink: 0;
  }

  .namespace-list-tree .namespace-entry-contents & > span {
    display: inline-flex;
    align-items: center;
    height: 16px;
    min-width: 30px;
  }

  .namespace-list-tree .namespace-entry-contents & .stat-value {
    margin: 2px 0 0 5px;
  }
}

@utility stat-value {
  .namespace-list-tree .namespace-entry-contents .stats & {
    margin: 2px 0 0 5px;
  }
}

@layer utilities {
  body {
    height: 100vh;
    overflow: hidden;
  }
}

@layer components {
  kbd {
    @apply rounded-lg border border-slate-200 bg-slate-100 px-2 py-1.5 text-sm font-semibold text-slate-800 dark:border-slate-500 dark:bg-slate-600 dark:text-slate-100;
  }

  dt {
    @apply text-base font-medium text-gray-900 dark:text-white;
  }

  dd {
    @apply text-gray-500 dark:text-gray-400;
  }

  dd:not(:last-child) {
    @apply mb-4;
  }

  p link {
    @apply font-medium text-green-600 underline hover:no-underline dark:text-green-500;
  }

  input[type="checkbox"] {
    @apply focus:ring-primary-300 dark:focus:ring-primary-600 h-4 w-4 rounded-sm border border-slate-300 bg-slate-50 focus:ring-4 dark:border-slate-600 dark:bg-slate-800 dark:ring-offset-slate-800;
  }

  input[type="search"]::-webkit-search-cancel-button {
    -webkit-appearance: none;
    cursor: pointer;
    height: 20px;
    width: 20px;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20' fill='currentColor' class='w-5 h-5'%3E%3Cpath d='M6.28 5.22a.75.75 0 00-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 101.06 1.06L10 11.06l3.72 3.72a.75.75 0 101.06-1.06L11.06 10l3.72-3.72a.75.75 0 00-1.06-1.06L10 8.94 6.28 5.22z' /%3E%3C/svg%3E%0A");
  }

  /* VIRAL DIALOG */
  dialog {
    @apply focus:outline-hidden max-h-full w-full max-w-2xl rounded-lg bg-white p-0 shadow-sm dark:bg-slate-800;
    top: 50%;
    left: 50%;
    -webkit-transform: translateX(-50%) translateY(-50%);
    -moz-transform: translateX(-50%) translateY(-50%);
    -ms-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
  }

  dialog::backdrop {
    @apply backdrop-blur-xs bg-slate-400/30 dark:bg-slate-900/40;
  }

  strong {
    @apply font-semibold;
  }
}

.pagy-nav.pagination {
  @apply shadow-xs isolate inline-flex -space-x-px rounded-md;
}

.page.next a {
  @apply flex h-full items-center justify-center rounded-r-lg border border-slate-300 bg-white px-3 py-1.5 leading-tight text-slate-500 hover:bg-slate-100 hover:text-slate-700 dark:border-slate-700 dark:bg-slate-800 dark:text-slate-400 dark:hover:bg-slate-700 dark:hover:text-white;
}

.page.prev a {
  @apply ml-0 flex h-full items-center justify-center rounded-l-lg border border-slate-300 bg-white px-3 py-1.5 text-slate-500 hover:bg-slate-100 hover:text-slate-700 dark:border-slate-700 dark:bg-slate-800 dark:text-slate-400 dark:hover:bg-slate-700 dark:hover:text-white;
}

.page.next.disabled {
  @apply ml-0 flex h-full cursor-not-allowed items-center justify-center rounded-r-lg border border-slate-300 bg-slate-50 px-3 py-1.5 text-slate-500 dark:border-slate-700 dark:bg-slate-900 dark:text-slate-400;
}

.page.prev.disabled {
  @apply ml-0 flex h-full cursor-not-allowed items-center justify-center rounded-l-lg border border-slate-300 bg-slate-50 px-3 py-1.5 text-slate-500 dark:border-slate-700 dark:bg-slate-900 dark:text-slate-400;
}

.page a,
.page.gap {
  @apply focus:outline-hidden hover:text-primary-700 relative inline-flex items-center border border-slate-200 bg-white px-4 py-2 text-sm font-medium text-slate-900 hover:bg-slate-100 focus:z-10 focus:ring-4 focus:ring-slate-200 dark:border-slate-600 dark:bg-slate-800 dark:text-slate-400 dark:hover:bg-slate-700 dark:hover:text-white dark:focus:ring-slate-700;
}

.page.active {
  @apply text-primary-600 bg-primary-50 border-primary-300 hover:bg-primary-100 hover:text-primary-700 z-10 flex items-center justify-center border px-3 py-2 text-sm leading-tight dark:border-slate-700 dark:bg-slate-800 dark:text-white;
}

.pagy-info {
  @apply text-sm font-normal text-slate-500 dark:text-slate-400;
}

div.field_with_errors > :is(select) {
  @apply border-red-700 text-red-900 placeholder-red-300;
}

.table-container table:not(:has(tbody td)) {
  display: none;
}

.table-container:not(:has(td)) .empty_state_message {
  display: block;
}

.table-container .empty_state_message {
  display: none;
}

.fixed-table-component {
  height: calc(100vh - 50px - 32px);
  max-height: calc(100vh - 50px - 32px);
  display: flex;
  flex-direction: column;
}

.scrollbar::-webkit-scrollbar {
  width: 0.75rem;
  height: 0.75rem;
}

.scrollbar::-webkit-scrollbar-thumb {
  --tw-bg-opacity: 1 !important;
  @apply bg-slate-300 dark:bg-slate-600;
  border-radius: 0.25rem;
}

.scrollbar::-webkit-scrollbar-corner {
  display: none;
}

